--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="https://jaehayi.com/" target="_blank">Studio</a>
-            <a href="https://www.comfycollab.com/blog/" target="_blank">Blog</a>
+            <a href="https://jaehayi.com/">Studio</a>
+            <a href="https://www.comfycollab.com/blog/">Blog</a>
             <!-- 
             <a href="https://jaehayi.com/cp/" target="_blank">CP</a>
             <a href="https://jaehayi.com/library/" target="_blank">Library</a>
@@ -20,13 +20,13 @@
         <div class="content">
             <h1>I'm Jaeha Yi.</h1>
             <p>I develop games, websites, and programs.</p>
-            <p>I also do competitive programming on <a href="https://leetcode.com/jaehayi1/" target="_blank">LeetCode</a> and <a href="http://www.usaco.org/" target="_blank">USA Computing Olympiad</a></p>
+            <p>I also do competitive programming on <a href="https://leetcode.com/jaehayi1/">LeetCode</a> and <a href="http://www.usaco.org/">USA Computing Olympiad</a></p>
         </div>
         <div class="image">
-            <a href="https://jaehayi.com/" target="_blank">
+            <a href="https://jaehayi.com/">
                 <img src="images/me.png">
             </a>
-            <a href="https://www.comfycollab.com/blog/" target="_blank">
+            <a href="https://www.comfycollab.com/blog/">
                 <img src="images/likes.png">
             </a>
         </div>
